Grace/tests/gibbs/errors/t147.grace
// ERROR = P1037
var x is := 7
